dropdown overflow and left nav z-index fix

--- a/pgml-dashboard/static/css/scss/components/_navs.scss
+++ b/pgml-dashboard/static/css/scss/components/_navs.scss
@@ -177,6 +177,7 @@
     border-right: 1px solid #{$gray-500};
     max-width: $left-nav-w;
     padding-top: 0px;
+    z-index: $zindex-fixed;
 
     @include media-breakpoint-down(lg) {
         display: none;
